2006-11-02  Bob Halley  <halley@dnspython.org>

	* dns/query.py (udp): Messages from unexpected sources can now be
	  ignored by setting ignore_unexpected to True.

2006-10-31  Bob Halley  <halley@dnspython.org>

	* dns/query.py (udp): When raising UnexpectedSource, add more
	  detail about what went wrong to the exception.

2006-09-22  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.use_edns): add reasonable defaults for
	  the ednsflags, payload, and request_payload parameters.

	* dns/message.py (Message.want_dnssec): add a convenience method for
	  enabling/disabling the "DNSSEC desired" flag in requests.

	* dns/message.py (make_query): add "use_edns" and "want_dnssec"
	  parameters.

2006-08-17  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.read_resolv_conf): If /etc/resolv.conf
	  doesn't exist, just use the default resolver configuration (i.e.
	  the same thing we would have used if resolv.conf had existed and
	  been empty).

2006-07-26  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver._config_win32_fromkey): fix
	  cut-and-paste error where we passed the wrong variable to
	  self._config_win32_search().  Thanks to David Arnold for finding
	  the bug and submitting a patch.

2006-07-20  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Answer): Add more support for the sequence
	  protocol, forwarding requests to the answer object's rrset.
	  E.g. "for a in answer" is equivalent to "for a in answer.rrset",
	  "answer[i]" is equivalent to "answer.rrset[i]", and
	  "answer[i:j]" is equivalent to "answer.rrset[i:j]".

2006-07-19  Bob Halley  <halley@dnspython.org>

	* dns/query.py (xfr): Add IXFR support.

2006-06-22  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/IPSECKEY.py: Added support for the IPSECKEY RR type.

2006-06-21  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/SPF.py: Added support for the SPF RR type.

2006-06-02  Bob Halley  <halley@dnspython.org>
